start porting editor widgets and forms

--- a/tests/src/quickapp/qml.qrc
+++ b/tests/src/quickapp/qml.qrc
@@ -2,5 +2,8 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>LayerTreeView.qml</file>
+        <file>AboutPage.qml</file>
+        <file>GalleryPage.qml</file>
+        <file>MapPage.qml</file>
     </qresource>
 </RCC>
