--- a/tests/src/quickapp/qml.qrc
+++ b/tests/src/quickapp/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>LayerTreeView.qml</file>
+        <file>ScaleBar.qml</file>
     </qresource>
 </RCC>
