--- a/src/quickgui/images/images.qrc
+++ b/src/quickgui/images/images.qrc
@@ -45,5 +45,14 @@
         <file>xxxhdpi/ic_clear_white.png</file>
         <file>xxxhdpi/ic_delete_forever_white.png</file>
         <file>xxxhdpi/ic_save_white.png</file>
+        <file>nodpi/ic_broken_image_black.svg</file>
+        <file>nodpi/ic_camera_alt_border.svg</file>
+        <file>nodpi/ic_check_black.svg</file>
+        <file>nodpi/ic_clear_black.svg</file>
+        <file>nodpi/ic_clear_white.svg</file>
+        <file>nodpi/ic_delete_forever_white.svg</file>
+        <file>nodpi/ic_navigation_black.svg</file>
+        <file>nodpi/ic_photo_notavailable_white.svg</file>
+        <file>nodpi/ic_save_white.svg</file>
     </qresource>
 </RCC>
