--- a/src/quickgui/images/images.qrc
+++ b/src/quickgui/images/images.qrc
@@ -1,58 +1,13 @@
 <RCC>
     <qresource prefix="/">
-        <file>hdpi/ic_broken_image_black.png</file>
-        <file>hdpi/ic_camera_alt_border.png</file>
-        <file>hdpi/ic_check_black.png</file>
-        <file>hdpi/ic_clear_black.png</file>
-        <file>hdpi/ic_navigation_black.png</file>
-        <file>hdpi/ic_photo_notavailable_white.png</file>
-        <file>mdpi/ic_camera_alt_border.png</file>
-        <file>mdpi/ic_broken_image_black.png</file>
-        <file>mdpi/ic_check_black.png</file>
-        <file>mdpi/ic_clear_black.png</file>
-        <file>mdpi/ic_navigation_black.png</file>
-        <file>mdpi/ic_photo_notavailable_white.png</file>
-        <file>xhdpi/ic_broken_image_black.png</file>
-        <file>xhdpi/ic_camera_alt_border.png</file>
-        <file>xhdpi/ic_check_black.png</file>
-        <file>xhdpi/ic_clear_black.png</file>
-        <file>xhdpi/ic_navigation_black.png</file>
-        <file>xhdpi/ic_photo_notavailable_white.png</file>
-        <file>xxhdpi/ic_broken_image_black.png</file>
-        <file>xxhdpi/ic_camera_alt_border.png</file>
-        <file>xxhdpi/ic_check_black.png</file>
-        <file>xxhdpi/ic_clear_black.png</file>
-        <file>xxhdpi/ic_navigation_black.png</file>
-        <file>xxhdpi/ic_photo_notavailable_white.png</file>
-        <file>xxxhdpi/ic_broken_image_black.png</file>
-        <file>xxxhdpi/ic_camera_alt_border.png</file>
-        <file>xxxhdpi/ic_check_black.png</file>
-        <file>xxxhdpi/ic_clear_black.png</file>
-        <file>xxxhdpi/ic_navigation_black.png</file>
-        <file>xxxhdpi/ic_photo_notavailable_white.png</file>
-        <file>hdpi/ic_clear_white.png</file>
-        <file>hdpi/ic_delete_forever_white.png</file>
-        <file>hdpi/ic_save_white.png</file>
-        <file>mdpi/ic_clear_white.png</file>
-        <file>mdpi/ic_delete_forever_white.png</file>
-        <file>mdpi/ic_save_white.png</file>
-        <file>xhdpi/ic_clear_white.png</file>
-        <file>xhdpi/ic_delete_forever_white.png</file>
-        <file>xhdpi/ic_save_white.png</file>
-        <file>xxhdpi/ic_clear_white.png</file>
-        <file>xxhdpi/ic_delete_forever_white.png</file>
-        <file>xxhdpi/ic_save_white.png</file>
-        <file>xxxhdpi/ic_clear_white.png</file>
-        <file>xxxhdpi/ic_delete_forever_white.png</file>
-        <file>xxxhdpi/ic_save_white.png</file>
-        <file>nodpi/ic_broken_image_black.svg</file>
-        <file>nodpi/ic_camera_alt_border.svg</file>
-        <file>nodpi/ic_check_black.svg</file>
-        <file>nodpi/ic_clear_black.svg</file>
-        <file>nodpi/ic_clear_white.svg</file>
-        <file>nodpi/ic_delete_forever_white.svg</file>
-        <file>nodpi/ic_navigation_black.svg</file>
-        <file>nodpi/ic_photo_notavailable_white.svg</file>
-        <file>nodpi/ic_save_white.svg</file>
+        <file>ic_broken_image_black.svg</file>
+        <file>ic_camera_alt_border.svg</file>
+        <file>ic_check_black.svg</file>
+        <file>ic_clear_black.svg</file>
+        <file>ic_clear_white.svg</file>
+        <file>ic_delete_forever_white.svg</file>
+        <file>ic_navigation_black.svg</file>
+        <file>ic_photo_notavailable_white.svg</file>
+        <file>ic_save_white.svg</file>
     </qresource>
 </RCC>
